OpenAPI small improvements and fixes
